--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,18 +1,18 @@
-.InputElement {
-   margin: 15px;
+.Icon {
+    background-color: #373E43;
+    box-sizing: border-box;
+    flex-basis: 45px;
+    border-right: solid 0.5px #616161;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.InputElement input {
-    position: absolute;
-    left: 50%;
-    border-radius: 5px;
-    background-color: #F2F2F2;
-}
-
-.InputElement label {
-    position: relative;
-    left: 25%;
-    margin-bottom: auto;
+.Icon > i {
+    color: #949494;
+    font-size: 10px;
+    margin: 0;
+    margin-bottom: 5.5px;
 }
 
 
