--- a/src/pages/Login/LoginFrame/LoginFrame.css
+++ b/src/pages/Login/LoginFrame/LoginFrame.css
@@ -1,33 +1,91 @@
 .Frame {
-    background-color: white;
-    width: 50%;
-    margin: auto;
-    margin-top: 15%;
-}
-
-.Header {
-    margin: 15px;
-}
-
-.Header img {
-    display: inline;
-}
-
-.Header h4 {
-    display: inline;
-    text-transform: uppercase;
-    padding-left: 5%;
-}
-
-.InputField {
-    margin: 20px;
-}
-
-.Error {
+    background-color: #2B303A;
+    color: #949494;
+    flex: 6 0 0%;
     display: flex;
     justify-content: center;
-    color: red;
-    margin: 5px;
-    text-transform: uppercase;
-    font-weight: 600;
+}
+
+.Frame > form {
+    padding-top: 40px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 25%;
+}
+
+.InputElement {
+    display: flex;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: solid 0.5px #373E43;
+    border-radius: 3px;
+    margin-bottom: 15px;
+}
+
+.InputElement > input {
+    width: 100%;
+    padding: 8px 20px;
+    color: #949494;
+    box-sizing: border-box;
+    background-color: #373E43;
+    border-style: none;
+}
+
+.InputElement > input:focus {
+    outline: none;
+    background-color: rgb(66, 74, 80);
+}
+
+.InputElement >input:focus::placeholder {
+    color: transparent;
+}
+
+
+
+.InputElement > input::placeholder {
+    color: #949494;
+    font-size: 12px;
+}
+
+.ButtonElement {
+    background-color: #303641;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: solid 1px #454A54;
+    border-radius: 2px;
+    color: #ffffff;
+    font-size: 14px;
+    height: 45px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ButtonElement > label {
+    margin-bottom: 0;
+    margin-left: 10px;
+}
+
+.ButtonElement > i {
+    width: 14px;
+    height: 14px;
+    margin-right: 15px;
+}
+
+.ButtonElement:hover {
+    background-color: #38404e;
+}
+
+.ButtonElement:focus {
+    outline: none;
+}
+
+.fw {
+    margin-top: 20px;
+    align-self: center;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 12px;
+    text-transform: capitalize;
+}
+
+.fw:hover {
+    text-decoration: underline;
+    cursor: pointer;
 }
