--- a/src/pages/Login/LoginFrame/LoginFrame.css
+++ b/src/pages/Login/LoginFrame/LoginFrame.css
@@ -89,3 +89,23 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+.mess {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    background-color: #B62020;
+    padding: 6px;
+}
+
+.mess > h4 {
+    font-size: 12px;
+    color: #fff;
+}
+
+.mess > i {
+    font-size: 10px;
+    margin: 0;
+    margin-bottom: 5.5px;
+    margin-right: 3px;
+}
