--- a/src/components/UI/Checkbox/Checkbox.css
+++ b/src/components/UI/Checkbox/Checkbox.css
@@ -1,23 +1,76 @@
-.RememberMe {
+.container {
+    display: block;
+    position: relative;
+    align-self: center;
+    padding-left: 15px;
     margin-top: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-}
-
-.RememberMe > label {
-    font-size: 12px;
-    text-transform: capitalize;
     margin-bottom: 0;
-    margin-left: 3px;
     color: rgba(255, 255, 255, 0.7);
+    cursor: pointer;
+    font-size: 12px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.container:hover {
+    text-decoration: underline;
+}
+
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 }
 
 
-.RememberMe input[type="checkbox"] {
-    -webkit-appearance: checkbox;
-    width: 12px;
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 12px;
+    width: 12px;
+    background-color: #303641;
+    border: 0.5px solid #e5e5e5;
+    border-radius: 2px;
+    margin-top: 3px;
 }
 
+
+.container:hover input ~ .checkmark {
+    background-color: #ccc;
+}
+
+
+.container input:checked ~ .checkmark {
+    background-color: #2196F3;
+    border: none;
+}
+
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+
+.container input:checked ~ .checkmark:after {
+    display: block;
+}
+
+
+.container .checkmark:after {
+    left: 4px;
+    top: 2px;
+    width: 4px;
+    height: 7px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
