--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -2,6 +2,9 @@
     background-color: #303641;
     height: 100%;
     min-width: 280px;
-    flex: 1 0 280;
+    max-width: 280px;
+    flex: 1 0 0;
     color: white;
+    box-sizing: border-box;
 }
+
