--- a/src/components/Menu/HigherOrderItems/HigherOrderItems.css
+++ b/src/components/Menu/HigherOrderItems/HigherOrderItems.css
@@ -1,26 +1,47 @@
 .container {
     background-color: #303641;
-    border-top: 0.5px solid #AAABAE;
-    border-bottom: 0.5px solid #AAABAE;
+    border-bottom: 0.25px solid #AAABAE;
     box-sizing: border-box;
     width: 100%;
     height: 41px;
-    color: #AAABAE;
-    font-size: 12px;
     display: flex;
     align-items: center;
-    padding-left: 40px;
-}
-
-.container > i {
+    justify-content: space-between;
     color: #AAABAE;
-    flex: 0 0 12px;
-    height: 12px;
-    margin-bottom: 4px;
-    margin-right: 2px;
 }
 
-a:hover {
+.Label {
+    display: flex;
+    color: inherit;
+    font-size: 12px;
+    margin-left: 30px;
+}
+
+.Label > img {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}
+
+.Toggle {
+    color: #fff !important;
+    margin-right: 15px;
+    margin-top: 2px;
+}
+
+.itemsContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.container:hover {
+    cursor: pointer;
+    background-color: rgba(69, 74, 84, 0.3);
+    color: #fff;
     text-decoration: none;
-    color: #AAABAE;
+}
+
+.container:active {
+    color: #fff;
+    background-color: #2d323d;
 }
