--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -2,17 +2,23 @@
     background-color: #373E43;
     box-sizing: border-box;
     flex-basis: 45px;
-    border-right: solid 0.5px #616161;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.Icon > i {
-    color: #949494;
-    font-size: 10px;
-    margin: 0;
-    margin-bottom: 5.5px;
+.container {
+    display: flex;
+    width: 100%;
+    height: 80%;
+    border-right: 0.5px solid #949494;
+    justify-content: center;
+    align-items: center;
+}
+
+.container > img {
+    height: 12px;
+    width: 12px;
 }
 
 
