--- a/src/pages/Login/contact/contact.css
+++ b/src/pages/Login/contact/contact.css
@@ -4,6 +4,7 @@
     justify-content: flex-start;
     box-sizing: border-box;
     background-color: #373E43;
+    text-transform: uppercase;
 }
 
 .text {
