--- a/src/components/Menu/Header/Header.css
+++ b/src/components/Menu/Header/Header.css
@@ -16,7 +16,8 @@
 }
 
 .ToggleButton {
-    flex: 1 0 36px;
+    min-width: 34px;
+    max-width: 34px;
     background-color: #303641;
     border: 1px solid #949494;
     border-radius: 2px;
@@ -24,7 +25,11 @@
     flex-direction: column;
     box-sizing: border-box;
     justify-content: space-evenly;
-    margin-right: 5px;
+}
+
+.ToggleButton:hover {
+    cursor: pointer;
+    background-color: rgba(69, 74, 84, 0.4);
 }
 
 .ToggleButton div {
@@ -34,5 +39,14 @@
     align-self: center;
 }
 
+
+.MenuHeaderOff {
+    display: flex;
+    box-sizing: border-box;
+    width: 100%;
+    height: 72px;
+    padding: 18px 0;
+    justify-content: center;
+}
 
 
