--- a/src/components/Menu/HigherOrderItems/HigherOrderItems.css
+++ b/src/components/Menu/HigherOrderItems/HigherOrderItems.css
@@ -10,6 +10,35 @@
     color: #AAABAE;
 }
 
+.containerOff {
+    background-color: #303641;
+    border-bottom: 0.25px solid #AAABAE;
+    box-sizing: border-box;
+    width: 100%;
+    height: 41px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #AAABAE;
+}
+
+.containerOff > img {
+    width: 15px;
+    height: 15px;
+}
+
+.containerOff:hover {
+    cursor: pointer;
+    background-color: rgba(69, 74, 84, 0.3);
+    color: #fff;
+    text-decoration: none;
+}
+
+.containerOff:active {
+    color: #fff;
+    background-color: #2d323d;
+}
+
 .Label {
     display: flex;
     color: inherit;
@@ -21,12 +50,6 @@
     width: 15px;
     height: 15px;
     margin-right: 5px;
-}
-
-.Toggle {
-    color: #fff !important;
-    margin-right: 15px;
-    margin-top: 2px;
 }
 
 .itemsContainer {
@@ -45,3 +68,38 @@
     color: #fff;
     background-color: #2d323d;
 }
+
+.ToggleOn, .ToggleOff {
+    width: 15px;
+    height: 15px;
+    margin-right: 20px;
+    transition: 0.3s ease-out;
+}
+
+.ToggleOn {
+    transform: rotate(90deg);
+}
+
+.itemsContainerOff {
+    display: block;
+    position: absolute;
+    height: 0;
+    top: auto;
+    left: 65px;
+    width: 240px;
+}
+
+.labelContainerOff {
+    display: flex;
+    align-items: center;
+    padding-left: 30px;
+    position: absolute;
+    left: 65px;
+    top: auto;
+    width: 240px;
+    background-color: #303641;
+    height: 41px;
+    border-bottom: 0.25px solid #AAABAE;
+    box-sizing: border-box;
+}
+
