danh sach tai khoan 2

--- a/src/pages/Accounts/Account/Account.css
+++ b/src/pages/Accounts/Account/Account.css
@@ -1,19 +1,20 @@
 .Account {
     width: 100%;
     display: flex;
-    margin-top: 30px;
-    flex: 115px;
-    max-height: 115px;
+    margin-top: 20px;
     background: #FFFFFF;
+    flex-basis: 18%;
     border: 1px solid #EBEBEB;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 2px;
     cursor: pointer;
+    color: #373E43;
 }
 
 .Account > img {
-    width: 13%;
     margin: 10px 30px 10px 10px;
+    width: 85px;
+    height: 85px;
 }
 
 .Info {
@@ -31,15 +32,17 @@
 
 .Info > table {
     font-size: 12px;
-    flex: 1 0 0;
-    margin-top: 5px;
+    margin-top: 10px;  
 }
 
-td {
-    padding: 6px 0;
-    padding-right: auto;
+tr:nth-child(2) > td{
+    padding: 11px 0;
 }
 
 td img{
     margin-right: 8px;
+}
+
+td {
+    width: 30%;
 }
