--- a/src/pages/Accounts/Accounts.css
+++ b/src/pages/Accounts/Accounts.css
@@ -5,3 +5,38 @@
     flex-direction: column;
     overflow-y: scroll;
 }
+
+.accountsContainer {
+    flex: 1 0 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.Buttons {
+    margin-bottom: 30px;
+    margin-top: 60px;
+    align-self: center;
+    font-size: 12px;
+    color: #333333;
+}
+
+.Buttons > button {
+    margin: 0.5px;
+    padding: 3px;
+}
+
+.Buttons > button:first-child {
+    padding-right: 10px;
+}
+.Buttons > button:last-child {
+    padding-left: 10px;
+}
+
+.prev {
+    padding: 0 10px 0 5px;
+}
+
+.next {
+    padding: 0 5px 0 10px;
+}
+
