danh sach tai khoan, them moi tai khoan, xem chi tiet tai khoa

--- a/src/pages/Accounts/Account/Account.css
+++ b/src/pages/Accounts/Account/Account.css
@@ -11,10 +11,16 @@
     color: #373E43;
 }
 
+.Account:hover, .Account:active {
+    text-decoration: none;
+    color: #373E43;
+}
+
 .Account > img {
     margin: 10px 30px 10px 10px;
     width: 85px;
     height: 85px;
+    border-radius: 50%;
 }
 
 .Info {
