--- a/src/pages/AddAccount/AddAccount.css
+++ b/src/pages/AddAccount/AddAccount.css
@@ -4,3 +4,30 @@
     display: flex;
     flex-direction: column;
 }
+
+.AddAccountContainer {
+    flex: 1 0 0;
+    margin-top: 70px;
+    width: 35%;
+    min-width: 360px;
+}
+
+.AddAccountContainer > p {
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
+.addAccountForm {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 88px;
+}
+
+
+.Button {
+    margin-top: 100px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
