--- a/src/pages/Accounts/Account/Account.css
+++ b/src/pages/Accounts/Account/Account.css
@@ -1,54 +1,55 @@
 .Account {
-    width: 100%;
-    display: flex;
-    margin-top: 20px;
-    background: #FFFFFF;
-    flex-basis: 18%;
-    border: 1px solid #EBEBEB;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 2px;
-    cursor: pointer;
-    color: #373E43;
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+  background: #ffffff;
+  flex-basis: 18%;
+  border: 1px solid #ebebeb;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 2px;
+  cursor: pointer;
+  color: #373e43;
 }
 
-.Account:hover, .Account:active {
-    text-decoration: none;
-    color: #373E43;
+.Account:hover,
+.Account:active {
+  text-decoration: none;
+  color: #373e43;
 }
 
 .Account > img {
-    margin: 10px 30px 10px 10px;
-    width: 85px;
-    height: 85px;
-    border-radius: 50%;
+  margin: 10px 30px 10px 10px;
+  width: 85px;
+  height: 85px;
+  border-radius: 50%;
 }
 
 .Info {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-    flex: 1 0 0;
-    text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  flex: 1 0 0;
+  text-transform: uppercase;
 }
 
 .Info > p {
-    font-size: 16px;
-    margin: 0;
+  font-size: 16px;
+  margin: 0;
 }
 
 .Info > table {
-    font-size: 12px;
-    margin-top: 10px;  
+  font-size: 12px;
+  margin-top: 10px;
 }
 
-tr:nth-child(2) > td{
-    padding: 11px 0;
+tr:nth-child(2) > td {
+  padding: 11px 0;
 }
 
-td img{
-    margin-right: 8px;
+td img {
+  margin-right: 8px;
 }
 
 td {
-    width: 30%;
+  width: 30%;
 }
