--- a/src/components/Menu/HigherOrderItems/HigherOrderItems.css
+++ b/src/components/Menu/HigherOrderItems/HigherOrderItems.css
@@ -1,105 +1,105 @@
 .container {
-    background-color: #303641;
-    border-bottom: 0.25px solid #AAABAE;
-    box-sizing: border-box;
-    width: 100%;
-    height: 41px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #AAABAE;
+  background-color: #303641;
+  border-bottom: 0.25px solid #aaabae;
+  box-sizing: border-box;
+  width: 100%;
+  height: 41px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #aaabae;
 }
 
 .containerOff {
-    background-color: #303641;
-    border-bottom: 0.25px solid #AAABAE;
-    box-sizing: border-box;
-    width: 100%;
-    height: 41px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #AAABAE;
+  background-color: #303641;
+  border-bottom: 0.25px solid #aaabae;
+  box-sizing: border-box;
+  width: 100%;
+  height: 41px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #aaabae;
 }
 
 .containerOff > img {
-    width: 15px;
-    height: 15px;
+  width: 15px;
+  height: 15px;
 }
 
 .containerOff:hover {
-    cursor: pointer;
-    background-color: rgba(69, 74, 84, 0.3);
-    color: #fff;
-    text-decoration: none;
+  cursor: pointer;
+  background-color: rgba(69, 74, 84, 0.3);
+  color: #fff;
+  text-decoration: none;
 }
 
 .containerOff:active {
-    color: #fff;
-    background-color: #2d323d;
+  color: #fff;
+  background-color: #2d323d;
 }
 
 .Label {
-    display: flex;
-    color: inherit;
-    font-size: 12px;
-    margin-left: 30px;
+  display: flex;
+  color: inherit;
+  font-size: 12px;
+  margin-left: 30px;
 }
 
 .Label > img {
-    width: 15px;
-    height: 15px;
-    margin-right: 5px;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
 }
 
 .itemsContainer {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .container:hover {
-    cursor: pointer;
-    background-color: rgba(69, 74, 84, 0.3);
-    color: #fff;
-    text-decoration: none;
+  cursor: pointer;
+  background-color: rgba(69, 74, 84, 0.3);
+  color: #fff;
+  text-decoration: none;
 }
 
 .container:active {
-    color: #fff;
-    background-color: #2d323d;
+  color: #fff;
+  background-color: #2d323d;
 }
 
-.ToggleOn, .ToggleOff {
-    width: 15px;
-    height: 15px;
-    margin-right: 20px;
-    transition: 0.3s ease-out;
+.ToggleOn,
+.ToggleOff {
+  width: 15px;
+  height: 15px;
+  margin-right: 20px;
+  transition: 0.3s ease-out;
 }
 
 .ToggleOn {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .itemsContainerOff {
-    display: block;
-    position: absolute;
-    height: 0;
-    top: auto;
-    left: 65px;
-    width: 240px;
+  display: block;
+  position: absolute;
+  height: 0;
+  top: auto;
+  left: 65px;
+  width: 240px;
 }
 
 .labelContainerOff {
-    display: flex;
-    align-items: center;
-    padding-left: 30px;
-    position: absolute;
-    left: 65px;
-    top: auto;
-    width: 240px;
-    background-color: #303641;
-    height: 41px;
-    border-bottom: 0.25px solid #AAABAE;
-    box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  padding-left: 30px;
+  position: absolute;
+  left: 65px;
+  top: auto;
+  width: 240px;
+  background-color: #303641;
+  height: 41px;
+  border-bottom: 0.25px solid #aaabae;
+  box-sizing: border-box;
 }
-
