--- a/src/components/Menu/HigherOrderItems/Item/Item.css
+++ b/src/components/Menu/HigherOrderItems/Item/Item.css
@@ -1,17 +1,18 @@
 .Item {
-    background-color: #2B303A;
-    color: #AAABAE;
-    width: 100%;
-    height: 37px;
-    border-bottom: 0.25px solid #AAABAE;
-    padding-left: 30px;
-    font-size: 12px;
-    display: flex;
-    align-items: center;
+  background-color: #2b303a;
+  color: #aaabae;
+  width: 100%;
+  height: 37px;
+  border-bottom: 0.25px solid #aaabae;
+  padding-left: 30px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
 }
 
-.Item:hover, .Item:active {
-    text-decoration: none;
-    color: #fff;
-    background-color: #2d323d;
+.Item:hover,
+.Item:active {
+  text-decoration: none;
+  color: #fff;
+  background-color: #2d323d;
 }
