--- a/src/components/UI/AddingInput/AddingInput.css
+++ b/src/components/UI/AddingInput/AddingInput.css
@@ -1,20 +1,20 @@
 .InputContainer {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 14px;
-    align-items: center;
-    height: 31px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 14px;
+  align-items: center;
+  height: 31px;
 }
 
 .InputContainer > label {
-    text-transform: uppercase;
-    font-size: 12px;
-    min-width: 52px;
-    margin: 0;
+  text-transform: uppercase;
+  font-size: 12px;
+  min-width: 52px;
+  margin: 0;
 }
 
-.InputContainer >  input{
-  color: #57565C;
+.InputContainer > input {
+  color: #57565c;
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
   height: 31px;
@@ -24,12 +24,12 @@
 }
 
 .NameClass {
-  background-color: #F5F5F6;
+  background-color: #f5f5f6;
   border-radius: 3px;
 }
 
 .NameClass > input {
-  color: #57565C;
+  color: #57565c;
   border: 1px solid rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
   height: 31px;
