--- a/src/components/UI/Checkbox/Checkbox.css
+++ b/src/components/UI/Checkbox/Checkbox.css
@@ -1,76 +1,70 @@
 .container {
-    display: block;
-    position: relative;
-    align-self: center;
-    padding-left: 15px;
-    margin-top: 15px;
-    margin-bottom: 0;
-    color: rgba(255, 255, 255, 0.7);
-    cursor: pointer;
-    font-size: 12px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  display: block;
+  position: relative;
+  align-self: center;
+  padding-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 0;
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+  font-size: 12px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .container:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
 }
-
 
 .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 12px;
-    width: 12px;
-    background-color: #303641;
-    border: 0.5px solid #e5e5e5;
-    border-radius: 2px;
-    margin-top: 3px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 12px;
+  width: 12px;
+  background-color: #303641;
+  border: 0.5px solid #e5e5e5;
+  border-radius: 2px;
+  margin-top: 3px;
 }
-
 
 .container:hover input ~ .checkmark {
-    background-color: #ccc;
+  background-color: #ccc;
 }
-
 
 .container input:checked ~ .checkmark {
-    background-color: #2196F3;
-    border: none;
+  background-color: #2196f3;
+  border: none;
 }
-
 
 .checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
+  content: "";
+  position: absolute;
+  display: none;
 }
-
 
 .container input:checked ~ .checkmark:after {
-    display: block;
+  display: block;
 }
 
-
 .container .checkmark:after {
-    left: 4px;
-    top: 2px;
-    width: 4px;
-    height: 7px;
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+  left: 4px;
+  top: 2px;
+  width: 4px;
+  height: 7px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
