--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,24 +1,22 @@
 .Icon {
-    background-color: #373E43;
-    box-sizing: border-box;
-    flex-basis: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: #373e43;
+  box-sizing: border-box;
+  flex-basis: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-    display: flex;
-    width: 100%;
-    height: 80%;
-    border-right: 0.5px solid #949494;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  width: 100%;
+  height: 80%;
+  border-right: 0.5px solid #949494;
+  justify-content: center;
+  align-items: center;
 }
 
 .container > img {
-    height: 12px;
-    width: 12px;
+  height: 12px;
+  width: 12px;
 }
-
-
